-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.1.0 Beta 1
-
None
-
Playbook OS 2.1 [latest], BlackBerry 10 OS, Qt 5 stable branch
Screen rotation doesn't work as expected on the Playbook with the 5.1.0 Beta 1 release in a QtQuick 2.0 application. It works with the 5.1 alpha however, so the change occurred between the two releases.
To recreate the problem, create a trivial QtQuick 2 application (ie. draw a rectangle with some centered text) and set the resize mode of the view to QQuickView::SizeRootObjectToView (this isn't necessary to recreate the problem, just easier to build a test case – the problem occurs either way).
Deploy the application and start it up. The initial orientation the application loads with will work fine. Now try rotating the device... it seems like the window gets clipped and/or partially pushed off screen. The touch input also seems wrong somehow. If you rotate back to the original orientation everything will work as expected again.
There's also something strange going on with QScreen in both the alpha and beta that might be worth mentioning here. I connected to the orientationChanged() signal and dumped screen information in a corresponding slot. I noticed that orientation didn't seem to match up with the screen geometry except for the initial state when the application has first loaded. Here's a log of the dump: http://pastebin.com/cTTcZGSa, first set of screen params seem good, the rest seem wrong. The "Orientation" parameter is correct in all cases – that is "Landscape" is when I'm holding the device in landscape and "Portrait" is in portrait.
| For Gerrit Dashboard: QTBUG-31329 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 59155,1 | QNX: Fix screen rotation | stable | qt/qtbase | Status: MERGED | +2 | 0 |